--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@
 	spring.datasource.url=jdbc:mysql://localhost:3306/apap_tugas?useSSL=false&serverTime=Asia/Jakarta
 
 # Sesuaikan dengan NAMA dan PASSWORD mysql anda
-	spring.datasource.username=root
-	spring.datasource.password=
+	spring.datasource.username=admin
+	spring.datasource.password=admin123
 
 # Optimize query untuk db MySql
 	spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
